--- a/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/STM.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/STM.scheme.archive.yaml
@@ -109,7 +109,7 @@ definitions:
                     component: StringEditQuantity
                 description: |
                   List of emails from users who performed the experiment.
-        experiment_instrument:
+        Instrument:
           section:
             m_annotations:
               eln:
@@ -280,13 +280,13 @@ definitions:
                 description: |
                   Description of the sample or sample preparation.
             sub_sections:
-              sample_component_set:
+              Sample_component_set:
                 section:
                   m_annotations:
                     eln:
                       overview: true
                   sub_sections:
-                    sample_component:
+                    Sample_component:
                       section:
                         m_annotations:
                           eln:
@@ -346,7 +346,7 @@ definitions:
                     eln:
                       overview: true
                   sub_sections:
-                    Notes:
+                    Note:
                       section:
                         m_annotations:
                           eln:
