--- a/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/config.json
+++ b/src/pynxtools_spm/nomad/examples/stm/STMExampleWithCustomization/config.json
@@ -10,7 +10,7 @@
     "scan_type": "",
     "identifier_experiment": { "identifier": "" },
     "experiment_description": { "raw_path": "/COMMENT" },
-    "experiment_instrument": {
+    "INSTRUMENT[instrument]": {
       "scan_environment": {
         "tip_temp": {
           "raw_path": "/Temperature 1/Temperature 1",
@@ -119,7 +119,7 @@
           "current_gain": { "raw_path": "/Current/Gain" }
         }
       },
-      "LOCKIN[lockin]": {
+      "lockin_amplifier": {
         "reference_frequency": {
           "raw_path": "/Lock-in/Frequency",
           "@units": "@default:Hz"
@@ -129,8 +129,7 @@
           "@units": "/Lock-in/Modulated signal/@unit"
         },
         "demodulated_signal": {
-          "raw_path": "/Lock-in/Demodulated signal",
-          "@units": "/Lock-in/Demodulated signal/@unit"
+          "raw_path": "/Lock-in/Demodulated signal"
         },
         "modulation_status": { "raw_path": "/Lock-in/Lock-in status" },
         "demodulated_frequency": "",
@@ -258,14 +257,14 @@
             "linear_sweep": {
               "scan_speed": "",
               "scan_time": "",
-              "forward_speed_bias": "",
-              "backward_speed_bias": "",
+              "forward_speed": "",
+              "backward_speed": "",
               "scan_points_bias": {
                 "raw_path": "/Bias Spectroscopy/Num Pixel"
               },
               "step_size_bias": "",
               "reset_bias": "",
-              "backward_weep": {
+              "backward_sweep": {
                 "raw_path": "/Bias Spectroscopy/backward sweep"
               },
               "SCAN_data[scan_data]": ""
@@ -284,26 +283,26 @@
         }
       },
       "piezo_sensor": {
-        "peizo_configuration": {
+        "PIEZO_CONFIG_SPM[piezo_configuration]": {
           "calibration": {
             "calibration_type": {
               "raw_path": "@default:active"
             },
             "calibration_coefficient_N[calibration_coefficient_n]": [
               {
-                "X": {
+                "x": {
                   "raw_path": "/Piezo Configuration/Calib. X",
                   "@units": "/Piezo Configuration/Calib. X/@unit"
                 }
               },
               {
-                "Y": {
+                "y": {
                   "raw_path": "/Piezo Configuration/Calib. Y",
                   "@units": "/Piezo Configuration/Calib. Y/@unit"
                 }
               },
               {
-                "Z": {
+                "z": {
                   "raw_path": "/Piezo Configuration/Calib. Z",
                   "@units": "/Piezo Configuration/Calib. Z/@unit"
                 }
@@ -311,19 +310,19 @@
             ],
             "second_order_correction_N[second_order_correction_n]": [
               {
-                "X": {
+                "x": {
                   "raw_path": "/Piezo Configuration/2nd order corr X",
                   "@units": "/Piezo Configuration/2nd order corr X/@unit"
                 }
               },
               {
-                "Y": {
+                "y": {
                   "raw_path": "/Piezo Configuration/2nd order corr Y",
                   "@units": "/Piezo Configuration/2nd order corr Y/@unit"
                 }
               },
               {
-                "Z": {
+                "z": {
                   "raw_path": "/Piezo Configuration/2nd order corr Z",
                   "@units": "/Piezo Configuration/2nd order corr Z/@unit"
                 }
@@ -334,19 +333,19 @@
             },
             "drift_N[drift_n]": [
               {
-                "X": {
+                "x": {
                   "raw_path": "/Piezo Configuration/Drift X",
                   "@units": "/Piezo Configuration/Drift X/@unit"
                 }
               },
               {
-                "Y": {
+                "y": {
                   "raw_path": "/Piezo Configuration/Drift Y",
                   "@units": "/Piezo Configuration/Drift Y/@unit"
                 }
               },
               {
-                "Z": {
+                "z": {
                   "raw_path": "/Piezo Configuration/Drift Z",
                   "@units": "/Piezo Configuration/Drift Z/@unit"
                 }
@@ -359,25 +358,25 @@
               ]
             },
             "hv_gain_N[hv_gain_n]": [
-              { "X": { "raw_path": "/Piezo Configuration/HV Gain X" } },
-              { "Y": { "raw_path": "/Piezo Configuration/HV Gain Y" } },
-              { "Z": { "raw_path": "/Piezo Configuration/HV Gain Z" } }
+              { "x": { "raw_path": "/Piezo Configuration/HV Gain X" } },
+              { "y": { "raw_path": "/Piezo Configuration/HV Gain Y" } },
+              { "z": { "raw_path": "/Piezo Configuration/HV Gain Z" } }
             ],
             "tilt_N[tilt_n]": [
               {
-                "X": {
+                "x": {
                   "raw_path": "/Piezo Configuration/Tilt X",
                   "@units": "/Piezo Configuration/Tilt X/@unit"
                 }
               },
               {
-                "Y": {
+                "y": {
                   "raw_path": "/Piezo Configuration/Tilt Y",
                   "@units": "/Piezo Configuration/Tilt X/@unit"
                 }
               },
               {
-                "Z": {
+                "z": {
                   "raw_path": "/Piezo Configuration/Tilt Z",
                   "@units": "/Piezo Configuration/Tilt X/@unit"
                 }
@@ -409,20 +408,26 @@
         },
         "POSITIONER_SPM[positioner_spm]": {
           "z_controller": {
-            "K_i_value": { "raw_path": "/Z-Controller/P gain" },
-            "K_p_value": { "raw_path": "/Z-Controller/I gain" },
-            "setpoint": {
+            "K_i": { "raw_path": "/Z-Controller/P gain" },
+            "K_p": { "raw_path": "/Z-Controller/I gain" },
+            "set_point": {
               "raw_path": "/Z-Controller/Setpoint",
               "@units": "/Z-Controller/Setpoint unit"
             },
-            "switch_off_delay": "",
-            "K_t_const": {
+            "D_t": {
               "raw_path": "/Z-Controller/Time const",
               "@units": "/Z-Controller/Time const/@unit"
             },
             "tip_lift": {
               "raw_path": "/Z-Controller/TipLift",
               "@units": "/Z-Controller/TipLift/@unit"
+            },
+            "controller_status": {
+              "raw_path": "/Z-Controller/Controller status"
+            },
+            "switch_off_delay": {
+              "raw_path": "/Z-Controller/Switch off delay",
+              "@units": "/Z-Controller/Switch off delay/@unit"
             },
             "z": {
               "raw_path": "/Z-Controller/Z",
@@ -431,40 +436,38 @@
           },
           "z_offset": "",
           "tip_position_z": "",
-          "controller_name": { "raw_path": "/Z-Controller/Controller name" },
-          "controller_status": {
-            "raw_path": "/Z-Controller/Controller status"
-          },
-          "switch_off_delay": {
-            "raw_path": "/Z-Controller/Switch off delay",
-            "@units": "/Z-Controller/Switch off delay/@unit"
-          }
+          "controller_label": { "raw_path": "/Z-Controller/Controller name" }
         },
         "x": "",
         "y": "",
-        "z": ""
+        "z": {
+          "raw_path": "/Z-Controller/Z",
+          "@units": "/Z-Controller/Z/@unit"
+        }
       },
       "real_time_controller": {
+        "rcs_fabrication": {
+          "model": {
+            "raw_path": "/NanonisMain/RT Release/value"
+          }
+        },
         "rcs_frequency": {
           "raw_path": "/NanonisMain/RT Frequency",
           "@units": "/NanonisMain/RT Frequency/@unit"
         },
-        "rcs_model": {
-          "raw_path": "/NanonisMain/RT Release"
-        },
-        "acquisition_time": {
+        "rcs_acquisition_time": {
           "raw_path": "/NanonisMain/Acquisition Period",
           "@units": "/NanonisMain/Acquisition Period/@unit"
         },
-        "animation_time": {
+        "rcs_animation_time": {
           "raw_path": "/NanonisMain/Animations Period",
           "@units": "/NanonisMain/Animations Period/@unit"
         },
-        "measurement_time": {
+        "rcs_measurement_time": {
           "raw_path": "/NanonisMain/Measurements Period",
           "@units": "/NanonisMain/Measurements Period/@unit"
         },
-        "indicators_period": {
+        "rcs_indication_time": {
           "raw_path": "/NanonisMain/Indicators Period",
           "@units": "/NanonisMain/Indicators Period/@unit"
         }
@@ -504,7 +507,9 @@
           "raw_path": "/Z/forward",
           "@units": "@default:m"
         },
-        "@title": "Height Plot of STM Experiment (Foward Direction)",
+        "title": {
+          "raw_path": "@default:Height Plot of STM Experiment (Foward Direction)"
+        },
         "grp_name": "z_forward"
       },
       {
@@ -513,7 +518,9 @@
           "raw_path": "/Z/backward",
           "@units": "@default:m"
         },
-        "@title": "Height Plot of STM Experiment (Backward Direction)",
+        "title": {
+          "raw_path": "@default:Height Plot of STM Experiment (Backward Direction)"
+        },
         "grp_name": "z_backward"
       },
       {
@@ -522,7 +529,9 @@
           "raw_path": "/Current/forward",
           "@units": "@default:A"
         },
-        "@title": "Current Plot of STM Experiment (Foward Direction)",
+        "title": {
+          "raw_path": "@default:Current Plot of STM Experiment (Foward Direction)"
+        },
         "grp_name": "current_forward"
       },
       {
@@ -531,7 +540,9 @@
           "raw_path": "/Current/backward",
           "@units": "@default:A"
         },
-        "@title": "Current Plot of STM Experiment (Backward Direction)",
+        "title": {
+          "raw_path": "@default:Current Plot of STM Experiment (Backward Direction)"
+        },
         "grp_name": "current_backward"
       }
     ],
