--- a/tests/data/nanonis/stm/version_gen_4_5_with_described_nxdata/eln_data.yaml
+++ b/tests/data/nanonis/stm/version_gen_4_5_with_described_nxdata/eln_data.yaml
@@ -1,11 +1,11 @@
 Sample:
   History:
-    Notes: 
+    Note: 
       description: <p>Sample history goes here.</p>
   description: <p>The sample description goes here.</p>
   name: DemoSample
-  sample_component_set:
-    sample_component:
+  Sample_component_set:
+    Sample_component:
       description: <p>Sample component description goes here.</p>
       name: DemoSample
 identifier_collection: DemoCollectionIdentifier-12
@@ -13,8 +13,10 @@ default: current_forward
 definition: NXstm
 experiment_description: <p>The experiment description goes here.</p>
 identifier_experiment: DemoExperimentIdentifier-12
-experiment_instrument:
+Instrument:
   hardware:
+    model: Generic 4.5
+    model/@version: '4.5'
     name: Nanonis
     vendor: Nanonis
   scan_environment:
@@ -28,7 +30,7 @@ experiment_instrument:
     vendor: Nanonis
 experiment_technique: STM
 scan_mode: constant current
-user:
+User:
   affiliation:
   - HU
   email:
