--- a/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
@@ -1,11 +1,11 @@
 Sample:
   History:
-    Notes: 
+    Note: 
       description: <p>Sample history goes here.</p>
   description: <p>Sample description is here.</p>
   name: DemoSample
-  sample_component_set:
-    sample_component:
+  Sample_component_set:
+    Sample_component:
       description: <p>Description of the sample component</p>
       name: DemoSampleComponent
 identifier_collection: STSCollectionIdentifier-1234
@@ -13,9 +13,10 @@ default: current_grad
 definition: NXsts
 experiment_description: <p>The experiment description is here.</p>
 identifier_experiment: STSExperimentIdentifier-1234
-experiment_instrument:
+Instrument:
   hardware:
     model: Generic 5e
+    model/@version: 5e
     name: Nanonis
     vendor: Nanonis
   lockin_amplifier:
@@ -27,7 +28,7 @@ experiment_instrument:
     name: Nanonis
     vendor: Nanonis
 experiment_technique: STS
-user:
+User:
   affiliation:
   - HU
   email:
