--- a/src/pynxtools_spm/nomad/examples/afm/AFMExampleWithCustomization/config.json
+++ b/src/pynxtools_spm/nomad/examples/afm/AFMExampleWithCustomization/config.json
@@ -66,7 +66,7 @@
                     "raw_path": "/Oscillation Control/Phase I gain",
                     "@units": "/Oscillation Control/Phase I gain/@unit"
                   },
-                  "K_d_value": "",
+                  "K_d": "",
                   "D_t": ""
                 }
               }
@@ -76,7 +76,7 @@
                 "feedback": {
                   "K_p": "",
                   "K_i": "",
-                  "K_d_value": "",
+                  "K_d": "",
                   "D_t": ""
                 }
               }
@@ -92,7 +92,7 @@
                     "raw_path": "/Oscillation Control/Amplitude I gain",
                     "@units": "/Oscillation Control/Amplitude I gain/@unit"
                   },
-                  "K_d_value": "",
+                  "K_d": "",
                   "D_t": ""
                 }
               }
@@ -115,9 +115,8 @@
           "raw_path": "/Lock-in/Frequency",
           "@units": "@default:Hz"
         },
-        "modulation_signal_type": {
-          "raw_path": "/Lock-in/Modulated signal",
-          "@units": "/Lock-in/Modulated signal/@unit"
+        "modulation_signal": {
+          "raw_path": "/Lock-in/Modulated signal"
         },
         "demodulated_signal": {
           "raw_path": "/Lock-in/Demodulated signal"
