--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ classifiers = [
 ]
 dependencies = [
     "findiff",
-    "pynxtools>=0.10.0",
-    # "pynxtools @ git+https:github.com/FAIRmat-NFDI/pynxtools.git@update_SPM#egg=pynxtools",
+    # "pynxtools>=0.10.0",
+    "pynxtools @ git+https:github.com/FAIRmat-NFDI/pynxtools.git@master#egg=pynxtools",
     # "pySPM==0.6.2",  # SPM file reader for Bruker files use it when you have Bruker files
     "pint"
 ]
