--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*debug.py
+
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
