--- a/tests/data/nanonis/afm/version_gen_4_with_described_nxdata/eln_data.yaml
+++ b/tests/data/nanonis/afm/version_gen_4_with_described_nxdata/eln_data.yaml
@@ -1,20 +1,21 @@
 Sample:
   History:
-    notes: <p>Sample History.</p>
+    Note: 
+      description: <p>Sample history goes here.</p>
   description: <p>Description.</p>
   name: Demo Name
-  sample_component_set:
-    sample_component:
+  Sample_component_set:
+    Sample_component:
       name: ComponentName
-collection_identifier:
-  identifier: DemoCollectionIdentifier-12345
+identifier_collection: DemoCollectionIdentifier-12345
 default: current_forward
 definition: NXafm
 experiment_description: <p>Experiment Description.</p>
-experiment_identifier:
-  identifier: DemoExperimentIdentifier-12345
-experiment_instrument:
+identifier_experiment: DemoExperimentIdentifier-12345
+Instrument:
   hardware:
+    model: Generic 4
+    model/@version: '4'
     name: Nanonis
     vendor: Nanonis
   software:
@@ -24,5 +25,9 @@ experiment_instrument:
     vendor: Nanonis
 experiment_technique: AFM
 scan_mode: contact mode
-user:
+User:
+  affiliation:
+  - HU
+  email:
+  - rubel.mozumder@physik.hu-berlin.de
   name: Rubel Mozumder
