--- a/tests/data/nanonis/sts/version_gen_5e_with_described_nxdata/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_5e_with_described_nxdata/eln_data.yaml
@@ -1,21 +1,22 @@
 Sample:
   History:
-    notes: <p>Sample history goes here.</p>
+    Note: 
+      description: <p>Sample history goes here.</p>
   description: <p>Sample Description</p>
   name: DemoName
-  sample_component_set:
-    sample_component:
+  Sample_component_set:
+    Sample_component:
       description: <p>Sample component description.</p>
       name: Sample Component
-collection_identifier:
-  identifier: STSCollectionIdentifier-1
+identifier_collection: STSCollectionIdentifier-1234
 default: current_grad
 definition: NXsts
 experiment_description: <p>Experiment description is here.</p>
-experiment_identifier:
-  identifier: STSExperimentIdentifier-1
-experiment_instrument:
+identifier_experiment: STSExperimentIdentifier-1234
+Instrument:
   hardware:
+    model: Generic 5e
+    model/@version: 5e
     name: Nanonis
     vendor: Nanonis
   lockin_amplifier:
@@ -27,10 +28,11 @@ experiment_instrument:
       value: 100.0
   software:
     model: Generic 5e
+    model/@version: 5e
     name: Nanonis
     vendor: Nanonis
 experiment_technique: STS
-user:
+User:
   affiliation:
   - HU
   email:
