--- a/src/pynxtools_spm/nomad/examples/afm/AFMExampleWithCustomization/AFM.scheme.archive.yaml
+++ b/src/pynxtools_spm/nomad/examples/afm/AFMExampleWithCustomization/AFM.scheme.archive.yaml
@@ -65,35 +65,24 @@ definitions:
             coming from the output file, e.g. Comment01 SYNC & Filter LP 8order WITHDRAW
             600 steps, locked Au(111), 50pA, 100 mV set point, 1mV DCA, 973Hz,138
             1st H, -84 2nd H.
+        identifier_experiment: 
+          type: str
+          m_annotations:
+            eln:
+              component: StringEditQuantity
+          description: |
+            An unique identifier fot the experiment. e.g. the identifier
+            could be specific for a lab or experiment team.
+
+        identifier_collection: 
+          type: str
+          m_annotations:
+            eln:
+              component: StringEditQuantity
+          description: |
+            An unique identifier of a collection. Use this
+            if the experiment if part of a collection of experiments
       sub_sections:
-        experiment_identifier:
-          section:
-            m_annotations:
-              eln:
-                overview: true
-            quantities:
-              identifier: 
-                type: str
-                m_annotations:
-                  eln:
-                    component: StringEditQuantity
-                description: |
-                  An unique identifier fot the experiment. e.g. the identifier
-                  could be specific for a lab or experiment team.
-        collection_identifier:
-          section:
-            m_annotations:
-              eln:
-                overview: true
-            quantities:
-              identifier: 
-                type: str
-                m_annotations:
-                  eln:
-                    component: StringEditQuantity
-                description: |
-                  An unique identifier of a collection. Use this
-                  if the experiment if part of a collection of experiments
         user:
           section:
             m_annotations:
@@ -123,7 +112,7 @@ definitions:
                     component: StringEditQuantity
                 description: |
                   List of emails from users who performed the experiment.
-        experiment_instrument:
+        Instrument:
           section:
             m_annotations:
               eln:
@@ -274,13 +263,13 @@ definitions:
                 description: |
                   Description of the sample or sample preparation.
             sub_sections:
-              sample_component_set:
+              Sample_component_set:
                 section:
                   m_annotations:
                     eln:
                       overview: true
                   sub_sections:
-                    sample_component:
+                    Sample_component:
                       section:
                         m_annotations:
                           eln:
@@ -340,7 +329,7 @@ definitions:
                     eln:
                       overview: true
                   quantities:
-                    notes:
+                    note:
                       type: str
                       m_annotations:
                         eln:
