--- a/tests/data/nanonis/afm/version_gen_4_default_config/eln_data.yaml
+++ b/tests/data/nanonis/afm/version_gen_4_default_config/eln_data.yaml
@@ -1,21 +1,21 @@
 Sample:
   History:
-    notes: <p>Sample History</p>
-  description: <p>Sample Description.</p>
-  name: DemoName
-  sample_component_set:
-    sample_component:
-      description: <p>Description</p>
-      name: DemoComponent
-collection_identifier:
-  identifier: DemoCollectionIdentifier-1234
+    Note: 
+      description: <p>Sample history goes here.</p>
+  description: <p>Description.</p>
+  name: Demo Name
+  Sample_component_set:
+    Sample_component:
+      name: ComponentName
+identifier_collection: DemoCollectionIdentifier-12345
 default: current_forward
 definition: NXafm
-experiment_description: <p>Experiment Description</p>
-experiment_identifier:
-  identifier: DemoExperimentIdentifier-1234
-experiment_instrument:
+experiment_description: <p>Experiment Description.</p>
+identifier_experiment: DemoExperimentIdentifier-12345
+Instrument:
   hardware:
+    model: Generic 4
+    model/@version: '4'
     name: Nanonis
     vendor: Nanonis
   software:
@@ -25,7 +25,7 @@ experiment_instrument:
     vendor: Nanonis
 experiment_technique: AFM
 scan_mode: tapping mode
-user:
+User:
   affiliation:
   - HU
   email:
