--- a/tests/data/nanonis/stm/version_gen_4_5_default_config/eln_data.yaml
+++ b/tests/data/nanonis/stm/version_gen_4_5_default_config/eln_data.yaml
@@ -1,30 +1,38 @@
 Sample:
   History:
-    notes: <p>Sample History goes here.</p>
-  description: <p>Sample description.</p>
+    Note: 
+      description: <p>Sample history goes here.</p>
+  description: <p>The sample description goes here.</p>
   name: DemoSample
-  sample_component_set:
-    sample_component:
-      description: <p>Component Description goes here.</p>
-      name: DemoComponent
-collection_identifier:
-  identifier: DemoCollectionIdentifier-1234
+  Sample_component_set:
+    Sample_component:
+      description: <p>Sample component description goes here.</p>
+      name: DemoSample
+identifier_collection: DemoCollectionIdentifier-12
 default: current_forward
 definition: NXstm
-experiment_description: <p>Experiment Description</p>
-experiment_identifier:
-  identifier: DemoExperimentIdentifier-1234
-experiment_instrument:
+experiment_description: <p>The experiment description goes here.</p>
+identifier_experiment: DemoExperimentIdentifier-12
+Instrument:
   hardware:
+    model: Generic 4.5
+    model/@version: '4.5'
+    name: Nanonis
+    vendor: Nanonis
+  scan_environment:
+    tip_temp:
+      unit: K
+      value: 100.0
+  software:
     model: Generic 4.5
     model/@version: '4.5'
     name: Nanonis
     vendor: Nanonis
 experiment_technique: STM
 scan_mode: constant current
-user:
+User:
   affiliation:
   - HU
   email:
-  - rubel,.mozumder@physik.hu-berlin.de
+    - rubel.mozumder@physik.hu-berlin.de
   name: Rubel Mozumder
