--- a/tests/data/nanonis/stm/version_gen_4_5_with_described_nxdata/eln_data.yaml
+++ b/tests/data/nanonis/stm/version_gen_4_5_with_described_nxdata/eln_data.yaml
@@ -1,21 +1,22 @@
 Sample:
   History:
-    notes: <p>Sample History goes here.</p>
+    Note: 
+      description: <p>Sample history goes here.</p>
   description: <p>The sample description goes here.</p>
   name: DemoSample
-  sample_component_set:
-    sample_component:
+  Sample_component_set:
+    Sample_component:
       description: <p>Sample component description goes here.</p>
       name: DemoSample
-collection_identifier:
-  identifier: DemoCollectionIdentifier-12
+identifier_collection: DemoCollectionIdentifier-12
 default: current_forward
 definition: NXstm
 experiment_description: <p>The experiment description goes here.</p>
-experiment_identifier:
-  identifier: DemoExperimentIdentifier-12
-experiment_instrument:
+identifier_experiment: DemoExperimentIdentifier-12
+Instrument:
   hardware:
+    model: Generic 4.5
+    model/@version: '4.5'
     name: Nanonis
     vendor: Nanonis
   scan_environment:
@@ -29,7 +30,7 @@ experiment_instrument:
     vendor: Nanonis
 experiment_technique: STM
 scan_mode: constant current
-user:
+User:
   affiliation:
   - HU
   email:
