--- a/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
+++ b/tests/data/nanonis/sts/version_gen_5e_default_config/eln_data.yaml
@@ -1,22 +1,22 @@
 Sample:
   History:
-    notes: <p>Sample history goes here.</p>
+    Note: 
+      description: <p>Sample history goes here.</p>
   description: <p>Sample description is here.</p>
   name: DemoSample
-  sample_component_set:
-    sample_component:
+  Sample_component_set:
+    Sample_component:
       description: <p>Description of the sample component</p>
       name: DemoSampleComponent
-collection_identifier:
-  identifier: STSCollectionIdentifier-1234
+identifier_collection: STSCollectionIdentifier-1234
 default: current_grad
 definition: NXsts
 experiment_description: <p>The experiment description is here.</p>
-experiment_identifier:
-  identifier: STSExperimentIdentifier-1234
-experiment_instrument:
+identifier_experiment: STSExperimentIdentifier-1234
+Instrument:
   hardware:
     model: Generic 5e
+    model/@version: 5e
     name: Nanonis
     vendor: Nanonis
   lockin_amplifier:
@@ -28,7 +28,7 @@ experiment_instrument:
     name: Nanonis
     vendor: Nanonis
 experiment_technique: STS
-user:
+User:
   affiliation:
   - HU
   email:
